tests/hevm/pass/layout1/layout1.act
constructor of A
interface constructor()

iff

  CALLVALUE == 0

creates

  uint128 x := 0
  uint128 y := 0

behaviour swap of A
interface swap()

iff

  CALLVALUE == 0

  storage

    x => y

  returns 1