tests/hevm/fail/redundant/redundant.act
constructor of A
interface constructor()

creates

iff

  CALLVALUE == 0

  uint x := 0

behaviour f of A
interface f()

iff

  CALLVALUE == 0
  x == 1

storage

  x => 2